# winterapi

./: LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  continuous_integration.yml  isort.yml  pylint.yml
notebooks/: 0_intro_accounts.ipynb  1_too_models.ipynb  2_submitting_toos.ipynb  Example_1_Setting_Up_Credentials.ipynb  Example_2_Submitting_a_ToO.ipynb  Example_3_Interacting_with_Observatory_Queue.ipynb  Example_4_Finding_Observatory_Data.ipynb  Example_5_Downloading_Observatory_Data.ipynb  Info_1_Introduction_To_Credentials.ipynb  Info_2a_ToO_Parameters.ipynb  Info_2b_Submitting_ToOs.ipynb
tests/: test_login.py  test_schedule.py
tests/testdata/: test_schedule.csv
winterapi/: __init__.py  base_api.py  configure_tests.py  credentials.py  endpoints.py  fidelius.py  messenger.py
